src/components/TdexOrderInput/style.scss
.exchange-coin-container {
  padding: calc(var(--ion-height-minus-tab-bar) / 16) 5vw;
  color: #fff;
  .subtitle {
    font-family: var(--ion-font-sub-heading);
    font-size: var(--ion-font-size-sub);
    color: var(--ion-color-tertiary);
    margin: 0 0 10px 0;
  }
  .exchanger-row {
    display: flex;
    justify-content: space-between;
    &.sub-row .balance {
      display: flex;
      flex-direction: column;
      flex: 45%;
    }
    &.sub-row > span:nth-child(2) {
      margin-left: 5vw;
      flex: 60%;
    }
    &.sub-row span {
      font-family: var(--ion-font-sub-heading);
      font-size: var(--ion-font-size-sub);
      color: var(--ion-color-tertiary);
    }
  }

  .coin-name {
    cursor: pointer;
    font-family: var(--ion-font-main);
    font-size: var(--ion-font-size-l);
    display: flex;
    align-items: center;
    .icon-wrapper {
      display: flex;
      align-items: center;
      width: 24px;
      margin-right: 2vw;
    }
    ion-icon {
      width: 6vw;
      height: 20px;
      margin-left: 1.5vw;
      margin-right: 3vw;
    }
  }

  .coin-amount {
    flex: 1;
    flex-direction: row;
    justify-content: space-between;
    --background: none;
    --padding-top: 0;
    --padding-bottom: 0;
    --padding-start: 0;
    --padding-end: 0;
    --inner-padding-end: 0;
    font-family: var(--ion-font-sub);
    font-size: var(--ion-font-size-l);
    color: var(--ion-color-tertiary-shade);

    &.active {
      color: #fff;
    }

    ion-input {
      --padding-bottom: 0;
      --padding-end: 0;
      --padding-start: 0;
      --padding-top: 0;
    }
  }
}

ion-spinner {
  align-self: center;
}

.icon {
  width: 20px;
}

.container {
  display: flex;
  flex-direction: column;
  max-width: 100vh;
}

.exchange-divider {
  position: relative;
  display: flex;
  transition: all 800ms ease-in-out;
  img {
    position: absolute;
    margin-top: -16px;
    left: calc(50vw - 17px);
    z-index: 2;
    background: rgba(15, 255, 0, 0.12);
    width: 32px;
    height: 32px;
    padding: 5px;
    border: rgb(15, 255, 0) 1px solid;
    border-radius: 50%;
  }
  &:before {
    content: '';
    position: absolute;
    left: 0;
    top: 0;
    height: 1px;
    width: calc(50% - 16px);
    border-top: 1px solid rgb(15, 255, 0);
  }
  &:after {
    content: '';
    position: absolute;
    right: 0;
    top: 0;
    height: 1px;
    width: calc(50% - 16px);
    border-top: 1px solid rgb(15, 255, 0);
  }
  ion-ripple-effect {
    height: fit-content;
    width: 100px;
    margin: 0 auto;
    opacity: 0.7;
  }
}

